--- a/src/Spryker/AvailabilityNotification/src/Spryker/Zed/AvailabilityNotification/Presentation/Mail/subscribed.text.twig
+++ b/src/Spryker/AvailabilityNotification/src/Spryker/Zed/AvailabilityNotification/Presentation/Mail/subscribed.text.twig
@@ -1,6 +1,6 @@
 {{ 'availability_subscription.mail.subscribed.head'|trans|raw }}
 
-{{ mail.availabilitySubscriptionMailData.productAttributes.name }}
+{{ mail.availabilitySubscriptionMailData.productName }}
 
 {{ mail.availabilitySubscriptionMailData.productAttributes.price ?? '' }}
 
