--- a/src/Spryker/AvailabilityNotification/src/Spryker/Zed/AvailabilityNotification/Presentation/Mail/layout.html.twig
+++ b/src/Spryker/AvailabilityNotification/src/Spryker/Zed/AvailabilityNotification/Presentation/Mail/layout.html.twig
@@ -597,7 +597,7 @@
                                             <tbody>
                                             <tr>
                                                 <td class="mcnImageContent" valign="top" style="padding-right: 9px;padding-left: 9px;padding-top: 0;padding-bottom: 0;text-align: center;mso-line-height-rule: exactly;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
-                                                    <img align="center" alt="{{ mail.availabilitySubscriptionMailData.productAttributes.name }}" src="{{ mail.availabilitySubscriptionMailData.productAttributes.image }}" width="250" style="max-width: 500px;padding-bottom: 0;display: inline !important;vertical-align: bottom;border: 0;height: auto;outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;" class="mcnRetinaImage">
+                                                    <img align="center" alt="{{ mail.availabilitySubscriptionMailData.productName }}" src="{{ mail.availabilitySubscriptionMailData.productImageUrl }}" width="250" style="max-width: 500px;padding-bottom: 0;display: inline !important;vertical-align: bottom;border: 0;height: auto;outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;" class="mcnRetinaImage">
                                                 </td>
                                             </tr>
                                             </tbody>
