--- a/src/Spryker/User/src/Spryker/Zed/User/Presentation/Edit/confirm-delete.twig
+++ b/src/Spryker/User/src/Spryker/Zed/User/Presentation/Edit/confirm-delete.twig
@@ -13,18 +13,18 @@
         {% block widget_content %}
             <div class="row">
                 <div class="col-sm-12">
-                    <p>You are trying to delete user: <b>{{ userFirsName ~ ' ' ~ userLastName }}</b></p>
-                    <p>It will be deleted from everywhere</p>
+                    <p>{{ "You are trying to delete user" | trans }}: <b>{{ user.firstName ~ ' ' ~ user.lastName }}</b></p>
+                    <p>{{ "It will be deleted from everywhere" | trans }}</p>
                 </div>
             </div>
             <hr/>
             <div class="row">
                 <div class="col-sm-12">
                     <a href="{{ app.request.headers.get('referer') }}" class="btn btn-back">{{ 'Back' | trans }}</a>
-                    {{ form_start(deleteUserForm) }}
-                        <input type="hidden" name="{{ idUserFieldName }}" value="{{ idUser }}" />
+                    {{ form_start(userDeleteConfirmForm) }}
+                        <input type="hidden" name="id-user" value="{{ user.idUser }}" />
                         <input type="submit" class="btn btn-danger safe-submit" value="{{ 'Delete' | trans }}" />
-                    {{ form_end(deleteUserForm) }}
+                    {{ form_end(userDeleteConfirmForm) }}
                 </div>
             </div>
         {% endblock %}
