--- a/src/Spryker/Gui/src/Spryker/Zed/Gui/Presentation/Layout/layout.twig
+++ b/src/Spryker/Gui/src/Spryker/Zed/Gui/Presentation/Layout/layout.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-application-locale=“{{ app.locale }}“>
+<html data-application-locale="{{ app.locale }}">
 <head>
 
     <meta charset="utf-8">
