BO-2587 restyled Backoffice.  (#8507)
BO-2587 Back Office Facelift

--- a/src/Spryker/Zed/ContentProductGui/Presentation/ProductAbstractList/product_abstract_list.twig
+++ b/src/Spryker/Zed/ContentProductGui/Presentation/ProductAbstractList/product_abstract_list.twig
@@ -3,11 +3,11 @@
         <i class="fa fa-trash"></i>
         {{ 'Delete' | trans }}
     </a>
-    <a href="#" data-direction="up" onclick="return false;" class="js-reorder-product-abstract btn btn-xs btn-outline btn-create">
+    <a href="#" data-direction="up" onclick="return false;" class="js-reorder-product-abstract btn btn-xs btn-outline btn-view">
         <i class="fa fa-arrow-up"></i>
         {{ 'Move Up' | trans }}
     </a>
-    <a href="#" data-direction="down" onclick="return false;" class="js-reorder-product-abstract btn btn-xs btn-outline btn-create">
+    <a href="#" data-direction="down" onclick="return false;" class="js-reorder-product-abstract btn btn-xs btn-outline btn-view">
         <i class="fa fa-arrow-down"></i>
         {{ 'Move Down' | trans }}
     </a>
